# badlock

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  locks_no_deadlock.ll  no_deadlock.ll  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  single_mock_deadlock.ll  single_mock_deadlock_std_sync.ll
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/rust-llvm/: Dockerfile  devcontainer.json
badlock/clis/badlock/: Cargo.toml
badlock/clis/badlock/src/: lib.rs
badlock/llvm-lock-detection/: Cargo.toml
badlock/llvm-lock-detection/src/: lib.rs
badlock/llvm-lock-detection/src/reentrant_lock_detection/: pass.rs
badlock/llvm-lock-detection/src/util/: llvm_ir.rs  mod.rs
badlock/lock-detection/: Cargo.toml
badlock/lock-detection/src/: lib.rs  lock_detection.rs  main.rs
badlock/lock-detection/src/reentrant_lock_detection/: facts.rs  mod.rs  program.rs
badlock/lock-detection/src/util/: insertion_order_map.rs  mod.rs
include/: Extractor.h
scripts/: test.sh
src/: Constraint.cpp  Extractor.cpp  Utils.cpp  analysis.dl
test/: Makefile  locks_no_deadlock.rs  no_deadlock.rs  single_mock_deadlock.rs  single_mock_deadlock_mangling.rs  single_mock_deadlock_std_sync.rs  single_mock_ptrdeadlock.rs
test/mock-deadlock/: Cargo.toml
test/mock-deadlock/src/: main.rs
test/mock-no-deadlock/: Cargo.toml
test/simple-deadlock/: Cargo.toml
test/simple-no-deadlock/: Cargo.toml
